@@ -42,13 +42,14 @@ import jdk.test.lib.Asserts;
  * @summary Test for EventTypeInfo
  * @requires vm.hasJFR
  * @library /test/lib /test/jdk
- * @run main/othervm jdk.jfr.jmx.info.TestEventTypeInfo
+ * @run main/othervm -Djdk.attach.allowAttachSelf=true -Dcom.sun.management.jmxremote jdk.jfr.jmx.info.TestEventTypeInfo
  */
 public class TestEventTypeInfo {
     public static void main(String[] args) throws Throwable {
         FlightRecorder jfr = FlightRecorder.getFlightRecorder();
 
-        FlightRecorderMXBean bean = JmxHelper.getFlighteRecorderMXBean();
+        long selfPID = JmxHelper.getPID();
+        FlightRecorderMXBean bean = JmxHelper.getFlighteRecorderMXBean(selfPID);
         List<EventTypeInfo> typeInfos = bean.getEventTypes();
 
         Map<String, EventType> types = new HashMap<>();
